--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,5 @@
+//$base-color: #000; // Seb color pour change la couleur
+$toolbar-base-color: #00FF00; //change la couleur du bas en hau
 @import 'sencha-touch/default/all';
 
 // You may remove any of the following modules that you
@@ -9,7 +11,7 @@
 @include sencha-tabs;
 //pour enleve la haut sencha-toolbar;
 @include sencha-toolbar;
-//@include sencha-toolbar-forms;
+@include sencha-toolbar-forms;
 @include sencha-indexbar;
 @include sencha-list;
 @include sencha-layout;
@@ -19,4 +21,7 @@
 
 // Your custom code goes here...
 
-//$base-color: #EEEEEE !default; // Seb color
+//$base-color: #000; // Seb color pour change la couleur
+//$toolbar-base-color: #EEEEEE !important;
+// $toolbar-border-color: #EEEEEE !important;
+//$neutral-color:red !important ;
