--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,8 @@
 //$base-color: #000; // Seb color pour change la couleur
 $toolbar-base-color: #00FF00; //change la couleur du bas en hau
+$button-radius: .0em;
 @import 'sencha-touch/default/all';
+
 
 // You may remove any of the following modules that you
 // do not use in order to create a smaller css file.
